# CardanoSolutionsArchitech

./: LICENSE  README.md
DataBaseMiddleware/: DatabaseMiddleware.cabal
